feat(init): wechat result
